--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "roaring20s",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rodanthi-alexiou.github.io/roaring20s",
+  "homepage": "https://rodanthi-alexiou.github.io/roaring20s/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -15,8 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build", 
-    "deploy": "gh-pages -d build", 
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
